# CalicoST

./: .readthedocs.yaml  NOTES.md  README.md  calicost.smk  config.yaml  configuration_cna  configuration_cna_multi  configuration_purity  environment.yml  example_config  pyproject.toml  setup.py
GRCh38_resources/: HLA_regions.bed  ig_gene_list.txt
docs/: conf.py  index.rst  installation.rst  parameters.rst  tutorials.rst
example/: X.npy  base_nb_mean.npy  lengths.npy  sorted_chr_pos.npy  total_bb_RD.npy
examples/: example_input_filelist
resources/: template_configfile_joint  template_configfile_single
src/: allele_starch.py  allele_starch_generateconfig.py  arg_parse.py  calicost_supervised.py  find_integer_copynumber.py  hmm_NB_BB_nophasing.py  hmm_NB_BB_nophasing_v2.py  hmm_NB_BB_phaseswitch.py  hmm_NB_sharedstates.py  hmm_gaussian.py  hmrf.py  hmrf_normalmixture.py  joint_allele_generateconfig.py  joint_allele_starch.py  normalmixture.py  oldcode.py  parse_input.py  phasing.py  phylogeny_startle.py  utils_IO.py  utils_distribution_fitting.py  utils_hmm.py  utils_hmrf.py  utils_phase_switch.py  utils_plotting.py
src/calicost/: allele_starch_generateconfig.py  arg_parse.py  calicost_main.py  calicost_supervised.py  estimate_tumor_proportion.py  find_integer_copynumber.py  hmm_NB_BB_nophasing.py  hmm_NB_BB_nophasing_float.py  hmm_NB_sharedstates.py  (+32 more)
tests/: test_hmm_NB_BB_nophasing_v2.py  test_hmrf.py  test_utils_distribution_fitting.py
utils/: filter_snps_forphasing.py  get_snp_matrix.py  maya_plotter.py  merge_bamfile.py  plot_hatchet.py  process_snps_merged.sh  subsample.py
(+2 files in other folders)
